<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/booksToReadFragment">

    <fragment
        android:id="@+id/booksToReadFragment"
        android:name="com.bookbuddy.ui.fragments.BooksToReadFragment"
        android:label="@string/books_to_read"
        tools:layout="@layout/fragment_books_to_read">
        <action
            android:id="@+id/action_booksToReadFragment_to_addEditBookFragment"
            app:destination="@id/addEditBookFragment" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.bookbuddy.ui.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/alreadyReadFragment"
        android:name="com.bookbuddy.ui.fragments.AlreadyReadFragment"
        android:label="@string/already_read"
        tools:layout="@layout/fragment_already_read" />

    <fragment
        android:id="@+id/addEditBookFragment"
        android:name="com.bookbuddy.ui.fragments.AddEditBookFragment"
        android:label="@string/add_book"
        tools:layout="@layout/fragment_add_edit_book" />

</navigation>

